--- a/views/admin.html
+++ b/views/admin.html
@@ -55,38 +55,9 @@
             </script>
         {% endif %}
         {% for entry in entries %}
-            <h2><a href="/admin/entry/{{ entry.entrytype }}/{{ entry.key }}" rel="bookmark" title="{{ entry.title }}">{{ entry.title }}</a> type={{ entry.entrytype }}</h2>
+            <h2><a href="/admin/entry/{{ entry.entrytype }}/{{ entry.key }}" rel="bookmark" title="{{ entry.title }}">{{ entry.title }}</a> </h2>
         {% endfor %}
     </div>
     <!-- Content Ends -->
 {% endblock %}
 
-{% block rightsidebar %}
-<!-- Right Sidebar Starts -->
-<div id="rightsidebar">
-    <h3>ADMIN</h3>
-    <ul>
-        {% for entry in recententries %}
-        <li><a href="#">{{ entry.title }} type={{ entry.entrytype }}</a></li>
-        {% endfor %}
-    </ul>
-    <h3>Tag Cloud</h3>
-    <ul>
-        tags
-    </ul>
-    <h3>Archives</h3>
-    <ul>
-        archives
-    </ul>
-    <h3>Blogs I Read</h3>
-    <ul>
-        <li><a href="http://cccarey.wordpress.com">Christian's</a></li>
-        <li><a href="http://www.carlosgabaldon.com">Carlos Gabaldon</a></li>
-    </ul>
-    <h3>Site Admin</h3>
-    <ul>
-        <li><a href="/admin/entry/list/post">Admin Logon</a></li>
-    </ul>
-</div>
-<!-- Right Sidebar Ends -->
-{% endblock %}
