--- a/views/setup.html
+++ b/views/setup.html
@@ -52,15 +52,15 @@
                     </fieldset>
                 </div>
                 <div class="optional">
-                    <label for="area1">Description:</label>
+                    <label for="area1">Footer1:</label>
                     <textarea name="area1" rows="4" cols="60" class="wide">{{ blogedit.area1 }}</textarea>
                 </div>
                 <div class="optional">
-                    <label for="area2">Description:</label>
+                    <label for="area2">Footer2:</label>
                     <textarea name="area2" rows="4" cols="60" class="wide">{{ blogedit.area2 }}</textarea>
                 </div>
                 <div class="optional">
-                    <label for="area3">Description:</label>
+                    <label for="area3">Footer3:</label>
                     <textarea name="area3" rows="4" cols="60" class="wide">{{ blogedit.area3 }}</textarea>
                 </div>
             </fieldset>
