bug fix in admin

--- a/views/base.html
+++ b/views/base.html
@@ -115,7 +115,7 @@
 
         <div id="credits">
             <!-- Credit link can be removed by giving a $5 donation, it'll help us all build good karma! -->
-            <img src="/images/freshlogo.gif" alt="FreshPress Themes" title="visit www.freshpressthemes.com" width="85" height="29" border="0" />
+            <img src="/static/images/freshlogo.gif" alt="FreshPress Themes" title="visit www.freshpressthemes.com" width="85" height="29" border="0" />
             <span>Theme from: <a href="http://www.freshpressthemes.com" title="See more fresh themes" target="_blank">FreshPress Themes</a> {% now "Y" %}</span> 
             <!-- Do Not Remove -->
         </div>
