wrong xml format on atom feed

--- a/views/base.html
+++ b/views/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %} {{ blog.title }}{% endblock %}</title>
     <meta name="generator" content="PotlatchBlog" />
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" />
-    <link rel="alternate" type="application/rss+atom" title="{{ blog.title }}" href="/atom" />
+    <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="/atom" />
     <link rel="pingback" href="/pingback" />
     {% block head_javascript %}{% endblock %}
 </head>
