adding support for analytics javascript in config

--- a/views/setup.html
+++ b/views/setup.html
@@ -63,6 +63,10 @@
                     <label for="area3">Footer3:</label>
                     <textarea name="area3" rows="4" cols="60" class="wide">{{ blogedit.area3 }}</textarea>
                 </div>
+                <div class="optional">
+                    <label for="analyticsjs">Analytics Javascript:</label>
+                    <textarea name="analyticsjs" rows="4" cols="60" class="wide">{{ blogedit.analyticsjs }}</textarea>
+                </div>
             </fieldset>
             <div class="actions"><input type="submit" class="primaryAction" id="submit" value="Save &#187;">
             &nbsp;&nbsp;<a href="#" id="cancelnode">cancel</a></div>
