--- a/views/setup.html
+++ b/views/setup.html
@@ -68,8 +68,10 @@
                     <textarea name="analyticsjs" rows="4" cols="60" class="wide">{{ blogedit.analyticsjs }}</textarea>
                 </div>
             </fieldset>
-            <div class="actions"><input type="submit" class="primaryAction" id="submit" value="Save &#187;">
-            &nbsp;&nbsp;<a href="#" id="cancelnode">cancel</a></div>
+            <div class="actions">
+                    <input type="submit" class="primaryAction" id="submit" value="Save &#187;">
+                    &nbsp;&nbsp;<a href="#" id="cancelnode">cancel</a>
+            </div>
 
         </form>
     </div>
