--- a/views/base.html
+++ b/views/base.html
@@ -119,6 +119,12 @@
             <span>Theme from: <a href="http://www.freshpressthemes.com" title="See more fresh themes" target="_blank">FreshPress Themes</a> {% now "Y" %}</span> 
             <!-- Do Not Remove -->
         </div>
+        <div  valign="bottom" align="center">
+            <a href="http://code.google.com/appengine/" >
+                <img style=" position: relative; top:26px; border:0;"  src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
+            </a> 
+        </div>
+
         <div class="clear"></div>
     </div>
 </div>
