javascript slug regexp

--- a/views/base.html
+++ b/views/base.html
@@ -3,7 +3,7 @@
 <head profile="http://gmpg.org/xfn/11">
     <title>{% block title %} {{ blog.title }}{% endblock %}</title>
     <meta name="generator" content="PotlatchBlog" />
-    <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/static/{{ blog.theme }}" type="text/css" media="screen" />
     <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="/atom" />
     <link rel="pingback" href="/pingback" />
     {% block head_javascript %}{% endblock %}
