changed ui to now show admin logon unless admin

--- a/views/_base_public.html
+++ b/views/_base_public.html
@@ -8,6 +8,9 @@
     {% for page in pages %}
     <li class="page_item page-item-2"><a href="/page/{{ page.slug }}" title="{{ page.title }}">{{ page.title }}</a></li>
     {% endfor %}
+    {% if current_userisadmin %}
+    <li class="page_item page-item-2"  style="float:right;"><a href="/admin/entry/list/post">Admin</a></li>
+    {% endif %}
     <div class="clear"></div>
 </ul>
 {% endblock %}
