--- a/views/error.html
+++ b/views/error.html
@@ -2,12 +2,9 @@
 
 
 {% block content %}
-    <a href="{{ url }}">{{ url_linktext }}</a>
-    <!-- Admin Full Width -->
-    
     <!-- Content Starts -->
     <div id="content">
-        <h2>ERROR: {{ message }}</h2>
+        <h2>{{ message }}</h2>
     </div>
     <!-- Content Ends -->
 {% endblock %}
