adding configuration section for comment javascript

--- a/views/setup.html
+++ b/views/setup.html
@@ -67,6 +67,10 @@
                     <label for="analyticsjs">Analytics Javascript:</label>
                     <textarea name="analyticsjs" rows="4" cols="60" class="wide">{{ blogedit.analyticsjs }}</textarea>
                 </div>
+                <div class="optional">
+                    <label for="analyticsjs">Comment Javascript:</label>
+                    <textarea name="commentjs" rows="4" cols="60" class="wide">{{ blogedit.commentjs }}</textarea>
+                </div>
             </fieldset>
             <div class="actions">
                     <input type="submit" class="primaryAction" id="submit" value="Save &#187;">
