--- a/views/admin.html
+++ b/views/admin.html
@@ -68,7 +68,7 @@
             </script>
         {% endif %}
         {% for entry in entries %}
-            <div><h2><a href="/admin/entry/{{ entry.entrytype }}/{{ entry.key }}" rel="bookmark" title="{{ entry.title }}">{{ entry.title }}</a> </h2>
+            <div><h2><a href="/admin/entry/{{ entry.entrytype }}/{{ entry.key }}" rel="bookmark" title="{{ entry.title }}">{{ entry.title }}</a> <a href="/entry/{{ entry.slug }}" style="color:red;">Preview</a> </h2>
                 <a href="/admin/entry/{{ entry.key }}" class="entrydelete" >delete</a>
             </div>
         {% endfor %}
