--- a/views/base.html
+++ b/views/base.html
@@ -114,6 +114,9 @@
             {{ blog.area3 }}
         </div>
 
+        <div class="clear"></div>
+    </div>
+    <div class="footerinner">
         <div id="credits">
             <!-- Credit link can be removed by giving a $5 donation, it'll help us all build good karma! -->
             <img src="/static/images/freshlogo.gif" alt="FreshPress Themes" title="visit www.freshpressthemes.com" width="85" height="29" border="0" />
@@ -125,8 +128,6 @@
                 <img style=" position: relative; top:26px; border:0;"  src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
             </a> 
         </div>
-
-        <div class="clear"></div>
     </div>
 </div>
 <!-- Footer Ends -->
