--- a/views/admin_base.html
+++ b/views/admin_base.html
@@ -20,7 +20,7 @@
     <li class="page_item page-item-2" style="float:right;"><a href="{{ url }}" title="About">{{ url_linktext }}</a></li>
     <div class="clear"></div>
 </ul>
-<span id="hiddenmessage" style="visibilityx:hidden;displayx:none;margin:0 40 0 0;" ></span>
+<div id="hiddenmessage" style="" ></div>
 
 {% endblock %}
 
