--- a/views/base.html
+++ b/views/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %} {{ blog.title }}{% endblock %}</title>
     <meta name="generator" content="PotlatchBlog" />
     <link rel="stylesheet" href="/static/{{ blog.theme }}" type="text/css" media="screen" />
-    <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="/atom" />
+    <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="{{ blog.feedurl }}" />
     <script type="text/javascript" src="/static/jquery-1.2.3.min.js"></script> 
     <link rel="pingback" href="/pingback" />
     {% block head_javascript %}{% endblock %}
@@ -19,7 +19,7 @@
             <input name="domains" type="hidden" value="{{ blog.baseurl }}"/>
             <input name="sitesearch" type="hidden" value="{{ blog.baseurl }}"/>
         </form>
-        <a href="/atom" title="Subscribe to {{ blog.title }} RSS feed">Subscribe to my RSS feed <img src="/static/images/feed-icon-16x16.png" width="16" height="16" border="0" title="Subscribe to Blog's RSS feed" alt="RSS"/></a>
+        <a href="{{ blog.feedurl }}" title="Subscribe to {{ blog.title }} RSS feed">Subscribe to my RSS feed <img src="/static/images/feed-icon-16x16.png" width="16" height="16" border="0" title="Subscribe to Blog's RSS feed" alt="RSS"/></a>
         <div class="clear"></div>
     </div>
 </div>
